--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -103,4 +103,18 @@
     <string name="unlock_recent_task_locks_quantity">解锁最近任务锁数量限制</string>
     <string name="unlock_self_start_quantity">解锁自启动数量限制</string>
     <string name="xposeddescription">基于 ColorOS12(Android 12) 适配的自定义工具</string>
+    <string name="status_bar_clock_format">状态栏时钟格式</string>
+    <string name="custom_clock_switch">自定义时钟-总开关</string>
+    <string name="status_bar_time_year">显示年份</string>
+    <string name="status_bar_time_month">显示月份</string>
+    <string name="status_bar_time_day">显示日期</string>
+    <string name="status_bar_time_week">显示星期</string>
+    <string name="status_bar_time_double_hour">显示时辰</string>
+    <string name="status_bar_time_period">显示时段</string>
+    <string name="status_bar_time_seconds">显示秒数</string>
+    <string name="status_bar_time_hide_space">隐藏间隔</string>
+    <string name="status_bar_time_double_line">双排显示</string>
+    <string name="status_bar_time_double_line_center_align">双排居中对齐</string>
+    <string name="status_bar_clock_size">时钟大小（0：不更改）</string>
+    <string name="status_bar_clock_double_line_size">双排大小（0：不更改）</string>
 </resources>
