--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,4 +168,6 @@
     <string name="status_bar_time_double_line_center_align">Dual row center align</string>
     <string name="status_bar_clock_size">Clock size (0: do not change)</string>
     <string name="status_bar_clock_double_line_size">Dual row size (0: do not change</string>
+    <string name="fast_reboot">Fast Reboot System</string>
+    <string name="are_you_sure_fast_reboot">Are you sure to fast reboot?</string>
 </resources>
