--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,4 +172,8 @@
     <string name="are_you_sure_fast_reboot">Are you sure to fast reboot?</string>
     <string name="package_installer">Package Installer</string>
     <string name="use_aosp_installer">Use AOSP installer</string>
+    <string name="features">Features</string>
+    <string name="enable_charging_ripple">Enable Charging Ripple</string>
+    <string name="lockscreen">Lock Screen</string>
+    <string name="remove_red_one">Remove the red one</string>
 </resources>
