--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -122,4 +122,7 @@
     <string name="are_you_sure_fast_reboot">确定快速重启系统？</string>
     <string name="package_installer">软件包安装器</string>
     <string name="use_aosp_installer">使用 AOSP 安装器</string>
+    <string name="skip_apk_scan">跳过Apk扫描</string>
+    <string name="allow_replace_install">允许替换安装</string>
+    <string name="allow_replace_install_summer">搭配\"允许降级安装应用\"使用</string>
 </resources>
