--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,7 @@
     <string name="enable_charging_ripple">Enable Charging Ripple</string>
     <string name="lockscreen">Lock Screen</string>
     <string name="remove_red_one">Remove the red one</string>
+    <string name="skip_apk_scan">Skip Apk Scan</string>
+    <string name="allow_replace_install">Allow Replace Install</string>
+    <string name="allow_replace_install_summer">Use with \"Allow downgrade\"</string>
 </resources>
