--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,6 @@
     <string name="enable_charging_ripple">Enable Charging Ripple</string>
     <string name="lockscreen">Lock Screen</string>
     <string name="remove_red_one">Remove the red one</string>
+    <string name="remove_oppo_default_app">Unrestrict some default applications</string>
+    <string name="remove_oppo_default_app_summary">Unlock OPPO\'s restrictions on some default apps</string>
 </resources>
