--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -84,6 +84,7 @@
     <string name="scope_other_summary">手机管家、电池与性能等</string>
     <string name="scope_phone_manager">手机管家</string>
     <string name="scope_security_center">安全中心</string>
+    <string name="scope_alarmclock">时钟</string>
     <string name="scope_systemui">系统界面</string>
     <string name="scope_systemui_summary">自定义系统界面、状态栏、锁屏等</string>
     <string name="sound">声音</string>
@@ -103,6 +104,7 @@
     <string name="third_party_open_source_statement">第三方开源声明</string>
     <string name="unlock_recent_task_locks_quantity">解锁最近任务锁数量限制</string>
     <string name="unlock_self_start_quantity">解锁自启动数量限制</string>
+    <string name="remove_clock_widget_redone">移除桌面时钟组件红一</string>
     <string name="xposeddescription">基于 ColorOS12(Android 12) 适配的自定义工具</string>
     <string name="status_bar_clock_format">状态栏时钟格式</string>
     <string name="custom_clock_switch">自定义时钟-总开关</string>
