--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -31,6 +31,7 @@
     <string name="downgr">允许降级安装应用</string>
     <string name="downgr_summary">允许应用在安装新版本的情况下直接覆盖安装旧版本</string>
     <string name="dropdown_status_bar_clock_display_seconds">下拉状态栏时钟显秒</string>
+    <string name="remove_dropdown_status_bar_clock_redone">移除下拉状态栏时钟红一</string>
     <string name="enhancedMode">增强模式</string>
     <string name="enhancedMode_summary">可以解决一些APP内部的完整性校验，一般不需要开启</string>
     <string name="github_url">欢迎更多开发者共同参与开发</string>
@@ -84,6 +85,7 @@
     <string name="scope_other_summary">手机管家、电池与性能等</string>
     <string name="scope_phone_manager">手机管家</string>
     <string name="scope_security_center">安全中心</string>
+    <string name="scope_alarmclock">时钟</string>
     <string name="scope_systemui">系统界面</string>
     <string name="scope_systemui_summary">自定义系统界面、状态栏、锁屏等</string>
     <string name="sound">声音</string>
@@ -103,6 +105,7 @@
     <string name="third_party_open_source_statement">第三方开源声明</string>
     <string name="unlock_recent_task_locks_quantity">解锁最近任务锁数量限制</string>
     <string name="unlock_self_start_quantity">解锁自启动数量限制</string>
+    <string name="remove_clock_widget_redone">移除桌面时钟组件红一</string>
     <string name="xposeddescription">基于 ColorOS12(Android 12) 适配的自定义工具</string>
     <string name="status_bar_clock_format">状态栏时钟格式</string>
     <string name="custom_clock_switch">自定义时钟-总开关</string>
